[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "prophet>=1.1.7",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "ta>=0.11.0",
    "yfinance>=0.2.65",
]
